fix layout issues

--- a/device-monitoring-system/src/app/app.component.scss
+++ b/device-monitoring-system/src/app/app.component.scss
@@ -5,3 +5,7 @@
 .text-center {
     text-align: center;
 }
+
+.mb-5 {
+    margin-bottom: 5px;
+}
